<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/winning"
    tools:context="edu.wm.cs.cs301.abigaildanielandkatiebourque.UI.WinningActivity">

    <Button
        android:id="@+id/gen_menu"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="52dp"
        android:text="@string/menu"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="112dp"
        android:layout_marginTop="64dp"
        android:text="@string/message_winning"
        android:textColor="?attr/colorAccent"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TotalPath"
        android:layout_width="271dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="324dp"
        android:text="@string/TotalPath"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TotalBat"
        android:layout_width="229dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="212dp"
        android:text="@string/TotalBat"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/path_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/path_length"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/TotalPath"
        app:layout_constraintTop_toBottomOf="@+id/battery_level" />

    <TextView
        android:id="@+id/battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="212dp"
        android:text="@string/battery_level"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/TotalBat"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


